--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,10 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "discord-py (>=2.5.2,<3.0.0)"
+    "discord-py (>=2.5.2,<3.0.0)",
+    "black (>=25.1.0,<26.0.0)",
+    "numpy (>=2.2.5,<3.0.0)",
+    "emoji (>=2.14.1,<3.0.0)"
 ]
 
 [tool.poetry]
